@@ -41,6 +41,8 @@ What's new in 0.60
 * In multiplayer games, the host can now choose respawn invulnerability as a range from 0 to 4 seconds, in 0.5 second increments; previously, it was 0 seconds or 2 seconds, with no other choices (Github issue #99).
 * In multiplayer anarchy games, the host can now configure the game to prefer to spawn players at sites farther from the currently live players (Github issue #108).
 * In multiplayer games, the host can now choose to duplicate preplaced primary weapons, secondary weapons, or powerups.
+* Added experimental support for uncapped ship turning (yawing, pitching, and rolling), popularly known as mouselook.  This is runtime-disabled by default.  Players who wish to use it must enable it in Options -> Controls under the heading "Uncapped Turning In:".  Separate knobs are provided for single player, multiplayer cooperative, and multiplayer anarchy.  For multiplayer games, mouselook must also be enabled by the host in "Game Setup" -> "Advanced Netgame Options" -> "Misc. Options" as "Allow coop mouselook" or "Allow anarchy mouselook", depending on game type.  For this feature, any multiplayer game other than cooperative is considered anarchy: "Anarchy", "Team Anarchy", "Robo-Anarchy", "Capture the Flag", and "Hoard", and "Bounty" are all grouped as "anarchy" since all those modes are competitive against other players.  If the host does not enable mouselook in the game setup menu, no players in that game will be permitted to use mouselook.  A host may permit mouselook for guests while keeping its own controls set to non-mouselook mode.  Although the feature is popularly known as mouselook, the implementation controls turning for all input types: keyboard, mouse, and joystick.
+* Players protected by spawn invulnerability are now able to acquire an invulnerability powerup, which will upgrade their invulnerability time from the 0.5-4.0 seconds of spawn invulnerability to the full 30 seconds of an invulnerability powerup.  Previously, a player protected by spawn invulnerability was not allowed to acquire an invulnerability powerup and instead received the error "You already are Invulnerable!"; players protected by an invulnerability powerup are still prohibited from collecting a new one until the old one runs out.
 * Drastically improved positional accuracy and less latency in Multiplayer games.
 * Revamped powerup management in Multiplayer which properly handles and prevents loss and excess of powerups.
 * Important packets in Mulitplayer are handled in proper order, fixing a multitude of packet-loss related issues.
